# kGit

./: CMakeLists.txt  README.md  plan.md
data/actions/: kgit-clone.desktop  kgit-init.desktop  kgit-open.desktop
src/: app.cpp  app.hpp  git_engine.cpp  git_engine.hpp  main.cpp
src/ui/: branch_view.cpp  branch_view.hpp  clone_dialog.cpp  clone_dialog.hpp  commit_dialog.cpp  commit_dialog.hpp  common.cpp  common.hpp  diff_view.cpp  diff_view.hpp  log_view.cpp  log_view.hpp  main_window.cpp  main_window.hpp  repo_browser.cpp  repo_browser.hpp  settings_dialog.cpp  settings_dialog.hpp  status_view.cpp  status_view.hpp
src/utils/: diff_tool.cpp  diff_tool.hpp  path_utils.cpp  path_utils.hpp
tests/: git_engine_test.cpp
